# mft-algotrade-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGILE_ROADMAP.md  ALL_SET.md  ARCHITECTURE_ANALYSIS.md  AUDIT_2025.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHECKLIST.md  CLEANUP_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.fix  Dockerfile.jupyter  FILE_INDEX.md  FINAL_SUMMARY.md  FINAL_UPDATE_SUMMARY.md  FIRST_RUN.txt  FIXES_SUMMARY.md  HOW_TO_USE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_ROADMAP.md  LAUNCH_INSTRUCTIONS.md  LICENSE  LOGS.md  METRICS_EXPORTER_README.md  Makefile  Makefile.backtest  PLAN_V4_FIXES.md  PRODUCTION_READINESS_REPORT.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  (+67 more)
.claude/: settings.local.json
.clinerules/: cline_rules.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backtest.yml  ci.yml  docs.yml  security-scan.yml
config/: connectors.yaml  database.py  live_trading_SAFE_DEFAULTS.yaml  model_best_params.json  paper_trading_config.yaml  strategy_config.yaml
config/templates/: paper_trading_config.yaml
deploy/: docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml
deploy/docker/: Dockerfile
deploy/scripts/: dev_entrypoint.sh
docker/: Dockerfile.jupyter  Dockerfile.test  requirements-research.txt
docker/nginx/: frequi.conf  nginx.conf
docs/: ADVANCED_PIPELINE_GUIDE.md  API_SETUP_RU.md  ARCHITECTURE_RU.md  CHANGELOG.md  CLEANUP_GUIDE.md  COMMERCIAL_DEPLOYMENT.md  HEALTH_CHECK_SYSTEM.md  ML_TRAINING_PIPELINE.md  ML_TRAINING_PIPELINE_RU.md  ORDER_MANAGEMENT.md  QUICKSTART_RU.md  RISK_MANAGEMENT_SPEC_RU.md  ROADMAP.md  STRATEGY_DEVELOPMENT_GUIDE.md  STRUCTURED_LOGGING_ELK.md  TELEGRAM_SETUP_RU.md  TESTING.md  TESTING_GUIDE.md  TOOLS_GUIDE.md  WALK_FORWARD_OPTIMIZATION_GUIDE.md  api.md  deployment.md  index.md  quickstart.md  strategies.md
docs/api/: config.md
docs/architecture/: ADR_TEMPLATE.md  overview.md
docs/dev/: checklist.md
docs/ops/: low_cost_deployment.md  runbook.md
docs/samples/: phase4_analysis_report.md  real_data_analysis_report.md  walk_forward_analysis_report.md
docs/whitepaper/: Designing_a_Hybrid_Async_Sync_MFT_Execution_Engine_in_Python.md  designing_hybrid_mft_execution_engine.md
examples/: feature_store_example.py  health_check_example.py  online_learning_example.py  order_management_example.py  quick_backtest.py  run_mock.py
migrations/: env.py
migrations/versions/: 07e3c58f5765_initial_migration.py
monitoring/alertmanager/: config.yml  trading_alerts.yml
monitoring/prometheus/: prometheus.yml
public/: index.html  status.json
research/: 01_research_template.ipynb  01_strategy_template.ipynb  02_strategy_analyzer.ipynb  03_backtest_automation.ipynb  README.md
scripts/: README.md  advanced_hyperopt.py  advanced_hyperopt_3y.py  analyze_data.py  analyze_feature_importance.py  apply_fixes.py  apply_fixes2.py  backtest.ps1  backtest.py  batch_backtest.py  check_atr_volatility.py  check_data.py  check_data_range.py  check_env.py  check_ml_predictions.py  check_precision.py  citadel.sh  connector_manager.py  create_final_strategy.py  data_sanitizer.py  deploy.sh  docs.ps1  download_data.py  download_data.sh  download_fresh_data.ps1  final_fix.py  fix-git-merge.ps1  fix_missing_data.py  fix_strategy.py  generate_report.py  health.ps1  health_check.py  health_monitor.py  inspect_data.py  inspect_feather.py  monte_carlo_test.py  optimize_strategy.py  overnight_setup.ps1  preflight_check.py  purge_freqai_data.py  (+33 more)
scripts/_archive/: nightly_hyperopt_overnight.py  nightly_hyperopt_overnight_light.py  profile_executor_fixed.py  walk_forward_backtest.py
scripts/analysis/: analyze_volatility.py  backtest_v7_rigorous.py  debug_features.py  generate_feature_importance_report.py  inspect_feather.py  reality_check_enhanced.py  run_improved_backtest.py  run_v7_wfo.py  select_features.py  verify_monte_carlo.py  verify_online_learning.py  verify_shap.py
scripts/maintenance/: auto_retrain.ps1  backup_db.sh  cleanup_docker.sh  cleanup_logs.sh  full_cycle_launch.py  nightly_hyperopt.py  profile_wfo.py  validate_config.py  verify_deployment.py  verify_environment.py  verify_full_system.py  verify_strategy_integration.py  weekly_ml_retrain.sh
scripts/ml/: retrain_production_model.py  retrain_production_model_fixed.py
scripts/ops/: canary_deploy.sh  kill_switch_watcher.py  reconcile.py  update_status.py  watchdog.py
scripts/risk/: chaos_test.py  chaos_test_v2.py  hard_stop_daemon.py  redis_chaos_test.py
scripts/setup/: setup_dev_env.py
scripts/windows/: README.md  backtest.ps1  deploy.ps1  download-data.ps1  logs.ps1
src/: README.md  __init__.py  main.py
src/analysis/: arbitrage_engine.py  attribution.py  drift_report.py  monte_carlo.py  reality_check.py
src/analytics/: __init__.py  dashboard.py  metrics.py  portfolio_tracker.py
src/backtesting/: vectorized_backtester.py  wfo_engine.py
src/config/: __init__.py  config_manager.py  manager.py  unified_config.py  validated_config.py
src/connectors/: __init__.py  database_connector.py  exchange_connector.py  freqtrade_connector.py  telegram_connector.py
src/dashboard/: app.py
src/data/: __init__.py  alternative_data_fetcher.py  async_fetcher.py  convert_freqtrade.py  convert_parquet.py  downloader.py  (+3 more)
tests/: __init__.py  conftest.py  load_test.py  mft_performance_test.py  test_config_watcher_stress.py  test_hot_reload.py  test_hrp.py  test_meta_labeling.py  test_property_based.py  test_risk_robustness.py  test_telegram_bot_mock.py
tools/: check_db.py  fix_db.py  init_db.py
user_data/: circuit_breaker_state.json  guide_hyperopt_wfo.md  hyperopt_results.json  hyperopt_results_3y.json  model_best_params.json  model_best_params_3y.json  selected_features.json  selected_features_track_b.json  test_selected_features.json  tradesv3.sqlite-shm  tradesv3.sqlite-wal
(+244 files in other folders)
