[project]
name = "stoic-citadel"
version = "1.0.0"
description = "Professional HFT-lite Algorithmic Trading Infrastructure"
authors = [
    {name = "Stoic Citadel Team", email = "team@stoiccitadel.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["trading", "algorithmic-trading", "freqtrade", "cryptocurrency", "hft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "freqtrade>=2024.11",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta-lib>=0.4.28",
    "pandas-ta>=0.3.14b",
    "ccxt>=4.0.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
]

research = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "vectorbt>=0.25.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "catboost>=1.2.0",
]

monitoring = [
    "prometheus-client>=0.20.0",
    "grafana-api>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/kandibobe/hft-algotrade-bot"
Documentation = "https://github.com/kandibobe/hft-algotrade-bot/blob/main/README.md"
Repository = "https://github.com/kandibobe/hft-algotrade-bot"
Issues = "https://github.com/kandibobe/hft-algotrade-bot/issues"

# ==============================================================================
# PYTEST CONFIGURATION
# ==============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=user_data/strategies",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "backtest: marks tests that run backtests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# COVERAGE CONFIGURATION
# ==============================================================================

[tool.coverage.run]
source = ["user_data/strategies", "scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# BLACK CONFIGURATION
# ==============================================================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | user_data/data
  | user_data/logs
)/
'''

# ==============================================================================
# MYPY CONFIGURATION
# ==============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "user_data.strategies.*"
disallow_untyped_defs = false

# ==============================================================================
# RUFF CONFIGURATION (Alternative to Flake8)
# ==============================================================================

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg-info",
    ".venv",
    "user_data/data",
    "user_data/logs",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# ==============================================================================
# BANDIT CONFIGURATION (Security Linting)
# ==============================================================================

[tool.bandit]
exclude_dirs = [
    "/tests/",
    "/.venv/",
    "/build/",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
]

# ==============================================================================
# ISORT CONFIGURATION
# ==============================================================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

# ==============================================================================
# BUILD SYSTEM
# ==============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
