[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stoic-citadel"
version = "2.4.0"
description = "Professional MFT (Medium-Frequency Trading) Algorithmic Trading Bot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Stoic Citadel Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["trading", "bot", "algorithmic", "freqtrade", "cryptocurrency"]

dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "structlog>=24.0.0",
    
    # Data formats
    "pyarrow>=14.0.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "scikit-optimize>=0.9.0",
    "scipy>=1.10.0",
    "filelock>=3.0.0",
    "river>=0.21.0",
    "feast>=0.30.0",
    "onnxruntime>=1.15.0",
    "imbalanced-learn>=0.10.0",
    "optuna>=3.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "plotly>=5.14.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.18",
    "redis>=5.0.0",
    
    # Async & Exchange APIs
    "pytest-asyncio>=0.23.0",
    "ccxt>=4.0.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.9.0",
    
    # Visualization (required for backtest reports)
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    
    # Property-based testing
    "hypothesis>=6.90.0",
    
    # Technical Analysis
    "pandas-ta",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    
    # Performance
    "numba>=0.58.0",
    
    # Pydantic for configuration validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    
    # Code quality & formatting
    "ruff>=0.9.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    
    # Type checking
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-PyYAML>=6.0.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    
    # Development tools
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0",
    "pytest-postgresql>=5.0.0",
    "pip-audit>=2.7.0",
    # "semgrep>=1.60.0", # Not supported on Windows
    "detect-secrets>=1.4.0",
]

freqtrade = [
    "freqtrade>=2024.1",
    "ta-lib>=0.4.0",
]

research = [
    "jupyter>=1.0.0",
    "plotly>=5.14.0",
]

ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/kandibobe/mft-algotrade-bot"
Documentation = "https://github.com/kandibobe/mft-algotrade-bot#readme"
Repository = "https://github.com/kandibobe/mft-algotrade-bot"
Issues = "https://github.com/kandibobe/mft-algotrade-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | user_data/data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "user_data/data"]

[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), and mccabe (C) codes by default
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S101",  # Use of assert detected
    "S113",  # Probable use of requests call without timeout
    "RUF001", # String contains ambiguous unicode character
    "RUF002", # Docstring contains ambiguous unicode character
    "RUF003", # Comment contains ambiguous unicode character
]

# Allow autofix for all rules
fixable = ["ALL"]
unfixable = []

# Line length
line-length = 100

# Exclude files and directories
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "user_data/data",
    "**/__pycache__",
    "**/*.pyc",
]

[tool.ruff.lint]
# Enable flake8-bugbear (B) and flake8-comprehensions (C) plugins
extend-select = [
    "B",
    "C",
    "UP",
    "S",
]

# Set the maximum complexity
mccabe.max-complexity = 10

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "user_data/data",
    "**/__pycache__",
    ".venv",
    "venv",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]